log/build_2026-06-01_14-41-27/my_py_pkg/stderr.log
  File "/home/milena/ros2_ws/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg/trabalho.py", line 184
    ```
    ^
SyntaxError: invalid syntax

